# flutter_llama

./: .gitmodules  .metadata  README.md  ffigen.yaml  flake.nix  pubspec.yaml
.github/workflows/: ffigen.yaml  flutter.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
darwin/: flutter_llama.podspec
darwin/Classes/: ggml.h
darwin/Headers/: llama.h
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/expidusos/flutter_llama_example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_llama.podspec
ios/Classes/: ggml.c  llama.h
lib/: flutter_llama.dart  flutter_llama_bindings_generated.dart
linux/: CMakeLists.txt
macos/: flutter_llama.podspec
macos/Classes/: ggml.h  llama.cpp
macos/Headers/: ggml.h  llama.h
src/: CMakeLists.txt  flutter_llama.c
windows/: CMakeLists.txt
